--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a title="Portfolio" href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
+                    <a href="IoanaEnescu.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
                 </li>
                 <li>
                     <a title="Contact" href="#main">Contact</a>
@@ -34,7 +34,7 @@
       <section class="card">
         <aside>
             <div class="content profile">
-                <img src="Snapseed1.jpg" alt="avatar" class="avatar">
+                <img src="avatar@1x.png" alt="avatar" class="avatar">
                 <h2 class="name">Ioana</h2>
                 <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programming.</h4>
             </div>
