--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <a title="Portfolio" href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="Ioana-cv.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
+                    <a href="IoanaEnescu.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
                 </li>
                 <li>
                     <a title="Contact" href="#main">Contact</a>
