--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Ioana Enescu</title>
     <link rel="stylesheet" href="styles.css">
+    <!--<link href="https://fonts.googleapis.com/css?family=Gugi" rel="styles.css">-->
 </head>
 <body>
 <div id="page">
@@ -60,7 +61,7 @@
     </section>
     <footer>
         &copy; ioanaenescu.me
-        <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[]me</p>
+        <p><i class="fas fa-envelope-square"></i>ioana[at]ioanaenescu[.]me</p>
     </footer>
 </div>
 
