--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <header>
         <a class="logo" title="Ioana Enescu's bio" href="https://ioanaenescu.me/"><span>Ioana Enescu's bio</span></a>
         <nav class="topnav" id="myTopnav">
+            <section class="me">
+                <aside>
+                    <div class="content profile">
+                        <img src="avatar@1x.png" alt="avatar" class="avatar">
+                        <h2 class="name">Ioana</h2>
+                        <!--<h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programming.</h4>-->
+                    </div>
+                </aside>
+            </section>
             <ul>
                 <li>
                     <a title="Portfolio" href="portfolio.html">Portfolio</a>
@@ -31,7 +40,7 @@
             </ul>
         </nav>
     </header>
-      <section class="card">
+      <!--<section class="card">
         <aside>
             <div class="content profile">
                 <img src="avatar@1x.png" alt="avatar" class="avatar">
@@ -39,7 +48,7 @@
                 <h4 class="words">Freedom, Happiness, Love, Explore, Cats, Dogs, Photography, Programming.</h4>
             </div>
         </aside>
-    </section>
+    </section>-->
     <section class="main">
         <aside>
             <div class="content resume">
