- vertical menu - the CV change - the section with 'card' is replace with 'me' and moved in header section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a title="Portfolio" href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="IoanaEnescu.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
+                    <a href="IoanaCV.png" rel="nofollow"> CV <i class="fas fa-clipboard-list"></i></a>
                 </li>
                 <li>
                     <a title="Contact" href="#main">Contact</a>
@@ -52,8 +52,8 @@
     <section class="main">
         <aside>
             <div class="content resume">
-                <h3><a href="#">Hello everyone!</a></h3>
-                <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm interested in programming. I love cats and dogs. In my free time I'm an amateur photographer, actually an IPhone photographer (You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy) . And also I'm learning programming.</p>
+                <h2><a href="#">Hello!</a></h2>
+                <p>I am Ioana. I am 23 years old. I'm a civil engineer and I'm also a Junior Web Designer. I love cats and dogs. In my free time I'm an amateur photographer(You can visit my <a href="https://500px.com/ioanaenescu">500px page</a>, hope you'll enjoy).</p>
             </div>
             <div class="content study">
                 <h3><a href="#">Studies</a></h3>
